# AyurPost

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-app.txt
docs/: chunking-strategy.md  doc.md  final-spec.md  handoff.md  spec-mini.md  spec.md
src/ayurpost/: app.py  config.py
src/ayurpost/eval/: cases.py  eval_audit.py  eval_retrieval.py  eval_script.py  run_evals.py
src/ayurpost/gazetteer/: gazetteer.yaml  tagger.py
src/ayurpost/kb/: chunk_book.py  chunker.py  ocr_book.py  ocr_sushruta.py  style_test.py
src/ayurpost/pipeline/: assemble.py  audit.py  content.py  generate.py  generate_dosha.py  generate_services.py  images.py  season.py  veo.py  voice.py
src/ayurpost/retrieval/: embeddings.py  index.py  search.py
src/ayurpost/roadmap/: calendar_engine.py  clinic_services.yaml  dosha_education.yaml  posting_calendar.yaml  seasonal_bengaluru.yaml
