[project]
name = "ayurpost"
version = "0.1.0"
description = "AI-powered content pipeline for Ayurvedic clinics"
requires-python = ">=3.11"
dependencies = [
    # Orchestration + retrieval
    "llama-index-core>=0.12.0",
    "llama-index-llms-anthropic>=0.6.0",
    "qdrant-client>=1.12.0",

    # LLM (caption generation + judge)
    "anthropic>=0.40.0",

    # Google Cloud — OCR, image gen, TTS
    "google-genai>=0.3.0",
    "google-cloud-documentai>=2.30.0",
    "google-cloud-texttospeech>=2.16.0",

    # Embeddings — Voyage AI (32K window, multilingual)
    "voyageai>=0.3.0",

    # Hybrid retrieval — BM25 sparse vectors (exact rare-Sanskrit-term match)
    "fastembed>=0.3.0",

    # Utilities
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ayurpost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
